fix: Connection name overflowing on connecting screen COMPASS-4727 (#275)

--- a/packages/compass-connect/src/components/connect.less
+++ b/packages/compass-connect/src/components/connect.less
@@ -669,6 +669,9 @@
   .connecting-modal-status {
     margin-top: 24px;
     font-weight: bold;
+    max-height: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .connecting-modal-animation {
